- Fix buttons align in navbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,10 @@
-.navbar-nav>li>a {
+.navbar-nav > li > a {
     padding-top: 13px;
     padding-bottom: 13px;
 }
 
 .navbar-brand.logo {
-    /*background: url('/icons/favicon-96x96.png') no-repeat center;*/
-    /*background-size: 32px 32px;*/
-    /*width: 40px;*/
-    padding-top: 12px;
-    padding-bottom: 18px;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.btn-270 {
-    padding-top: 11px;
-    padding-bottom: 15px;
+    padding: 12px 15px 18px;
 }
 
 textarea {
@@ -37,19 +26,6 @@ textarea {
 .feed-wrapper .media-list .media {
     border-bottom: 1px dashed #efefef;
     margin-bottom: 25px;
-}
-
-.glyphicon-270 {
-    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
-    -webkit-transform: rotate(270deg);
-    -moz-transform: rotate(270deg);
-    -ms-transform: rotate(270deg);
-    -o-transform: rotate(270deg);
-    transform: rotate(270deg);
-    padding-top: 2px;
-    padding-bottom: -2px;
-    padding-left: 0px;
-    padding-right: 0px;
 }
 
 .glyphicon.spinning {
